Modified name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js_exercise_for_react_router_1",
+  "name": "react_quiz_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
