--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "react_quiz_app",
+  "homepage": "https://tsuyopon-xyz.github.io/react_quiz_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "gh-pages": "^2.1.1",
     "he": "^1.2.0",
     "lodash": "^4.17.15",
     "react": "^16.10.1",
@@ -12,6 +14,8 @@
     "react-scripts": "3.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
